package game.renderer;

import static org.lwjgl.opengl.GL11.GL_FLOAT;
import static org.lwjgl.opengl.GL11.GL_TRIANGLES;
import static org.lwjgl.opengl.GL11.GL_UNSIGNED_INT;
import static org.lwjgl.opengl.GL11.glDrawElements;
import static org.lwjgl.opengl.GL13.GL_TEXTURE0;
import static org.lwjgl.opengl.GL13.glActiveTexture;
import static org.lwjgl.opengl.GL15.GL_ARRAY_BUFFER;
import static org.lwjgl.opengl.GL15.GL_DYNAMIC_DRAW;
import static org.lwjgl.opengl.GL15.GL_ELEMENT_ARRAY_BUFFER;
import static org.lwjgl.opengl.GL15.GL_STATIC_DRAW;
import static org.lwjgl.opengl.GL15.glBindBuffer;
import static org.lwjgl.opengl.GL15.glBufferData;
import static org.lwjgl.opengl.GL15.glBufferSubData;
import static org.lwjgl.opengl.GL15.glGenBuffers;
import static org.lwjgl.opengl.GL20.glDisableVertexAttribArray;
import static org.lwjgl.opengl.GL20.glEnableVertexAttribArray;
import static org.lwjgl.opengl.GL20.glVertexAttribPointer;
import static org.lwjgl.opengl.GL30.glBindVertexArray;
import static org.lwjgl.opengl.GL30.glGenVertexArrays;

import java.util.ArrayList;
import java.util.List;

import org.joml.Matrix4f;
import org.joml.Vector2f;
import org.joml.Vector4f;

import game.components.SpriteRenderer;
import game.engine.GameObject;
import game.engine.Window;
import game.util.AssetPool;

public class RenderBatch implements Comparable<RenderBatch> {
	// Vertex
	// ======
	// Pos Color tex coords tex id
	// Float, Float, float, float, float, float float, float, float
	private final int POS_SIZE = 2;
	private final int COLOR_SIZE = 4;
	private final int TEX_COORDS_SIZE = 2;
	private final int TEX_ID_SIZE = 1;
	private final int ENTITY_ID_SIZE = 1;
	// private final int SHOULD_OUTLINE_SIZE = 1;

	private final int POS_OFFSET = 0;
	private final int COLOR_OFFSET = POS_OFFSET + POS_SIZE * Float.BYTES;
	private final int TEX_COORDS_OFFSET = COLOR_OFFSET + COLOR_SIZE * Float.BYTES;
	private final int TEX_ID_OFFSET = TEX_COORDS_OFFSET + TEX_COORDS_SIZE * Float.BYTES;
	private final int ENTITY_ID_OFFSET = TEX_ID_OFFSET + TEX_ID_SIZE * Float.BYTES;
	// private final int SHOULD_OUTLINE_OFFSET = ENTITY_ID_OFFSET + ENTITY_ID_SIZE *
	// Float.BYTES;

	private final int VERTEX_SIZE = 10;
	private final int VERTEX_SIZE_BYTES = VERTEX_SIZE * Float.BYTES;

	private SpriteRenderer[] sprites;
	private int numSprites;
	private boolean hasRoom;
	private float[] vertices;
	private int[] texSlots = { 0, 1, 2, 3, 4, 5, 6, 7 };

	private List<Texture> textures;
	private int vaoID, vboID;
	private int maxBatchSize;

	private int zIndex;

	private Renderer renderer;

	public RenderBatch(int maxBatchSize, int zIndex, Renderer renderer) {
		// shader =
		// AssetPool.getShader("src/main/resources/assets/shaders/default.glsl");
		// shader = AssetPool.getShader("assets/shaders/default.glsl");

		this.sprites = new SpriteRenderer[maxBatchSize];
		this.maxBatchSize = maxBatchSize;

		this.zIndex = zIndex;

		// 4 Vertices quads
		vertices = new float[maxBatchSize * 4 * VERTEX_SIZE];

		this.numSprites = 0;
		this.hasRoom = true;
		this.textures = new ArrayList<>();

		this.renderer = renderer;
	}

	public void start() {
		// Generate and bind a Vertex Array Object
		vaoID = glGenVertexArrays();
		glBindVertexArray(vaoID);

		// Allocate space for Verticies

		vboID = glGenBuffers();
		glBindBuffer(GL_ARRAY_BUFFER, vboID);
		glBufferData(GL_ARRAY_BUFFER, vertices.length * Float.BYTES, GL_DYNAMIC_DRAW);

		// Create and upload indicies buffer
		int eboID = glGenBuffers();
		int[] indicies = generateIndices();
		glBindBuffer(GL_ELEMENT_ARRAY_BUFFER, eboID);
		glBufferData(GL_ELEMENT_ARRAY_BUFFER, indicies, GL_STATIC_DRAW);

		// Enable the buffer attribute pointer
		glVertexAttribPointer(0, POS_SIZE, GL_FLOAT, false, VERTEX_SIZE_BYTES, POS_OFFSET);
		glEnableVertexAttribArray(0);

		glVertexAttribPointer(1, COLOR_SIZE, GL_FLOAT, false, VERTEX_SIZE_BYTES, COLOR_OFFSET);
		glEnableVertexAttribArray(1);

		glVertexAttribPointer(2, TEX_COORDS_SIZE, GL_FLOAT, false, VERTEX_SIZE_BYTES, TEX_COORDS_OFFSET);
		glEnableVertexAttribArray(2);

		glVertexAttribPointer(3, TEX_ID_SIZE, GL_FLOAT, false, VERTEX_SIZE_BYTES, TEX_ID_OFFSET);
		glEnableVertexAttribArray(3);

		glVertexAttribPointer(4, ENTITY_ID_SIZE, GL_FLOAT, false, VERTEX_SIZE_BYTES, ENTITY_ID_OFFSET);
		glEnableVertexAttribArray(4);

		// glVertexAttribPointer(5, SHOULD_OUTLINE_SIZE, GL_FLOAT, false,
		// VERTEX_SIZE_BYTES, SHOULD_OUTLINE_OFFSET);
		// glEnableVertexAttribArray(5);
	}

	public void addSprite(SpriteRenderer spr) {
		// Get index and add renderObject
		int index = this.numSprites;
		this.sprites[index] = spr;
		this.numSprites++;

		if (spr.getTexture() != null) {
			if (!textures.contains(spr.getTexture())) {
				textures.add(spr.getTexture());
			}
		}
		// Add properties to local verticies array
		loadVertexProperties(index);

		if (numSprites >= this.maxBatchSize) {
			this.hasRoom = false;
		}
	}

	public void render() {
		boolean rebufferData = false;
		for (int i = 0; i < numSprites; i++) {
			SpriteRenderer spr = sprites[i];
			if (spr.isDirty()) {
				loadVertexProperties(i);
				spr.setClean();
				rebufferData = true;
			}

			if (spr.gameObject.transform.zIndex != this.zIndex) {
				destroyIfExists(spr.gameObject);
				renderer.add(spr.gameObject);
				i--;
			}
		}

		if (rebufferData) {
			glBindBuffer(GL_ARRAY_BUFFER, vboID);
			glBufferSubData(GL_ARRAY_BUFFER, 0, vertices);
		}

		// Use shader
		//
		float currentTime = Window.getCurrentTime();

		Shader shader = Renderer.getBoundShader();
		shader.uploadMat4f("uProjection", Window.getScene().camera().getProjectionMatrix());
		shader.uploadMat4f("uView", Window.getScene().camera().getViewMatrix());
		shader.uploadFloat("time", currentTime);

		for (int i = 0; i < textures.size(); i++) {
			// First slot (0) reserved for no Texture
			glActiveTexture(GL_TEXTURE0 + i + 1);
			textures.get(i).bind();
		}

		shader.uploadIntArray("uTextures", texSlots);

		glBindVertexArray(vaoID);

		glEnableVertexAttribArray(0);
		glEnableVertexAttribArray(1);

		glDrawElements(GL_TRIANGLES, this.numSprites * 6, GL_UNSIGNED_INT, 0);

		glDisableVertexAttribArray(0);
		glDisableVertexAttribArray(1);
		glBindVertexArray(0);

		for (int i = 0; i < textures.size(); i++) {
			textures.get(i).unbind();
		}

		shader.detach();
	}

	private void loadVertexProperties(int index) {
		SpriteRenderer sprite = this.sprites[index];

		// Find the offset within array (4 vertivces per sprite)
		int offset = index * 4 * VERTEX_SIZE;
		// Float float float, flaot, float, float

		Vector4f color = sprite.getColor();
		Vector2f[] texCoords = sprite.getTexCoords();

		int texID = 0;
		if (sprite.getTexture() != null) {
			for (int i = 0; i < textures.size(); i++) {
				if (textures.get(i).equals(sprite.getTexture())) {
					texID = i + 1;
					break;
				}
			}
		}

		boolean isRotated = sprite.gameObject.transform.rotation != 0;

		Matrix4f transformMatrix = new Matrix4f().identity();
		if (isRotated) {
			transformMatrix.translate(sprite.gameObject.transform.position.x, sprite.gameObject.transform.position.y,
					0);

			transformMatrix.rotate((float) Math.toRadians(sprite.gameObject.transform.rotation), 0, 0, 1);
			transformMatrix.scale(sprite.gameObject.transform.scale.x, sprite.gameObject.transform.scale.y, 1);
		}

		// Add vertice with appropriate properties

		float xAdd = 0.5f;
		float yAdd = 0.5f;

		for (int i = 0; i < 4; i++) {
			if (i == 1) {
				yAdd = -0.5f;
			} else if (i == 2) {
				xAdd = -0.5f;
			} else if (i == 3) {
				yAdd = 0.5f;
			}

			Vector4f currentPos = new Vector4f(
					sprite.gameObject.transform.position.x + (xAdd * sprite.gameObject.transform.scale.x),
					sprite.gameObject.transform.position.y + (yAdd * sprite.gameObject.transform.scale.y),
					0, 1);
			if (isRotated) {
				currentPos = new Vector4f(xAdd, yAdd, 0, 1).mul(transformMatrix);
			}

			// Load Position
			vertices[offset] = currentPos.x;
			vertices[offset + 1] = currentPos.y;

			// Load COlor
			vertices[offset + 2] = color.x; // R
			vertices[offset + 3] = color.y; // B
			vertices[offset + 4] = color.z; // G
			vertices[offset + 5] = color.w; // A

			// Load position
			vertices[offset + 6] = texCoords[i].x; // G
			vertices[offset + 7] = texCoords[i].y; // A

			// Load texture id
			vertices[offset + 8] = texID;

			// Load entity id
			vertices[offset + 9] = sprite.gameObject.getUid() + 1;

			// // Load If Outline
			// float apllyOffset = (sprite.gameObject.getIsActiveGameObject()) ? 1.0f :
			// 0.0f;
			// vertices[offset + 10] = apllyOffset;

			offset += VERTEX_SIZE;
		}
	}

	private int[] generateIndices() {
		// 6 Indices per quad (3 per triangle)
		int[] elements = new int[6 * maxBatchSize];
		for (int i = 0; i < maxBatchSize; i++) {
			loadElementIndices(elements, i);
		}

		return elements;
	}

	private void loadElementIndices(int[] elements, int index) {
		int offsetArrayIndex = 6 * index;
		int offset = 4 * index;

		// Triangle 1
		elements[offsetArrayIndex] = offset + 3;
		elements[offsetArrayIndex + 1] = offset + 2;
		elements[offsetArrayIndex + 2] = offset + 0;

		// Triangle 2
		elements[offsetArrayIndex + 3] = offset + 0;
		elements[offsetArrayIndex + 4] = offset + 2;
		elements[offsetArrayIndex + 5] = offset + 1;
	}

	public boolean hasRoom() {
		return this.hasRoom;
	}

	public boolean hasTextureRoom() {
		return this.textures.size() < 8;
	}

	public boolean hasTexture(Texture tex) {
		return this.textures.contains(tex);
	}

	public int zIndex() {
		return this.zIndex;
	}

	@Override
	public int compareTo(RenderBatch o) {
		return Integer.compare(this.zIndex, o.zIndex());
	}

	public boolean destroyIfExists(GameObject go) {
		SpriteRenderer sprite = go.getComponent(SpriteRenderer.class);
		for (int i = 0; i < numSprites; i++) {
			if (sprites[i] == sprite) {
				for (int j = i; j < numSprites - 1; j++) {
					sprites[j] = sprites[j + 1];
					sprites[j].setDirty();
				}
				numSprites--;
				return true;
			}
		}

		return false;
	}
}
